Mil/lib/McxAPI.h


extern S16BIT mcx_Get_Element_Results_PP194(U16BIT deviceId, U16BIT busList, U16BIT elementIndex, U16BIT* blockStatusWord, U16BIT* buffer, U16BIT bufferSize, U16BIT* status1, U16BIT* status2, U16BIT* tag);

extern S16BIT mcx_Set_Error(U16BIT deviceId, U16BIT errorType, U16BIT messageNumber, U16BIT wordNumber, S32BIT injectionParameters, S16BIT zXDistortion);

extern S16BIT mcx_SetUserPort (U16BIT deviceId, U16BIT userPort);

extern S16BIT mcx_GetUserPort (U16BIT deviceId, U16BIT* userPort);

extern S16BIT mcx_GetCurrentFrameNumber(U16BIT deviceId, U16BIT* currFrameNumber);

extern S16BIT mcx_Element_SetGap(U16BIT deviceId, U16BIT elementId, U16BIT gap);

extern S16BIT mcx_wm_GetNextMsg_H009(U16BIT deviceId, U32BIT* swPointer, WORD* command, WORD* isCommandValid, WORD* data, WORD* bufferSize, U32BIT* BSW, U64BIT* tTag);

extern S16BIT mcx_wm_GetNextMsg_1553_194(U16BIT deviceId, S16BIT* msgType , U32BIT* swPointer, WORD* rxCommand, WORD* txCommand, WORD* data, WORD* bufferSize, WORD* rxStatus, WORD* txStatus, U32BIT* BSW, U64BIT* tTag);

extern S16BIT mcx_wm_collectMonitor(U16BIT deviceId);


extern S16BIT mcx_pTDR_GetRawData(U16BIT deviceId, U16BIT* buffer, U16BIT bufferSize);

extern S16BIT mcx_pTDR_Enable(U16BIT deviceId, U16BIT enable, U16BIT options);

extern S16BIT mcx_Restart (U16BIT deviceId, U16BIT busList);

extern S16BIT mcx_BusList_UpdateData (U16BIT deviceId, U16BIT busList, S32BIT* updatedFrame);

extern S16BIT mcx_GetSimulatorErrorsDescription(U32BIT bsw, S8BIT* errorsDescription, U16BIT protocol);

extern S16BIT mcx_Grip2_GetTemperature(U16BIT deviceId, S16BIT* temperature);

extern S16BIT mcx_GetReturnCodeDescription(S16BIT errorCode, S8BIT* errorCodeDescription);

extern S16BIT mcx_GetMonitorErrorsDescription(U32BIT bsw, S8BIT* errorsDescription);


extern S16BIT mcx_GetLicenseDescription(U16BIT deviceId, S8BIT* description);


extern S16BIT mcx_SetConfigurationRegisters(U16BIT deviceId, U16BIT configRegisters, U16BIT configRegisters2);

extern S16BIT mcx_GetConfigurationRegisters(U16BIT deviceId, U16BIT* configRegisters, U16BIT* configRegisters2);


extern S16BIT mcx_SetupRS422 (U16BIT deviceId, U16BIT line, U16BIT bitsCount, U16BIT parity, U16BIT stopBits, U16BIT rateDivider);

extern S16BIT mcx_SendRS422 (U16BIT deviceId, U16BIT line, U16BIT length, WORD* buffer);

extern S16BIT mcx_RS485_Setup (U16BIT moduleId, U16BIT line, U16BIT bitsCount, U16BIT parity, U16BIT stopBits, U16BIT rateDivider, U16BIT rxTxMode, U16BIT* offset);

extern S16BIT mcx_RS485_Put (U16BIT moduleId, U16BIT line, U16BIT length, WORD* buffer);

extern S16BIT mcx_RS485_Get (U16BIT moduleId, U16BIT line, U16BIT* offset, U16BIT length, WORD* buffer);

extern S16BIT mcx_RS485_GetNumberOfReceivedWords (U16BIT moduleId, U16BIT line, U16BIT offset, U16BIT* length);

extern S16BIT mcx_RS485_GetStatus (U16BIT moduleId, U16BIT * line0, U16BIT * line1);


//extern S16BIT mcx_A429_Pci_Channel_GetCount(U16BIT card, U32BIT* numOfChannels);
//extern S16BIT mcx_A429_Pci_Tx_Rx_Channel_Count(U16BIT card, U32BIT* numOfTxChannels, U32BIT* numOfRxChannels);
//extern S16BIT mcx_A429_Pci_Channel_Open(U16BIT card, U16BIT channel, mcx_A429ChannelInfo* channelInfo);
//extern S16BIT mcx_A429_Pci_Channel_GetInformation(U16BIT card, U16BIT channel, mcx_A429ChannelInfo* channelInfo);
//extern S16BIT mcx_A429_Pci_Channel_Close(U16BIT card, U16BIT channel);
//extern S16BIT mcx_A429_Pci_Channel_SetConfigRegister(U16BIT card, U16BIT channel, U32BIT chanFlags, bool manage = false, U32BIT manFreq = 0);
//extern S16BIT mcx_A429_Pci_Channel_GetConfigRegister(U16BIT card, U16BIT channel, U32BIT* chanFlags);
//extern S16BIT mcx_A429_Pci_Channel_GetStatusRegister(U16BIT card, U16BIT channel, U32BIT* chanStats);
//extern S16BIT mcx_A429_Pci_Receive (U16BIT card, U16BIT channel, U32BIT bufferSize, U32BIT* buffer, U32BIT* numberOfReceivedWords);
//extern S16BIT mcx_A429_Pci_Send (U16BIT card, U16BIT channel, U32BIT bufferSize, U32BIT* buffer, U32BIT* numberOfWrittenWords);
//extern S16BIT mcx_A429_Pci_GetRxWordsPending(U16BIT card, U16BIT channel, U32BIT* numberOfWords);
//extern S16BIT mcx_A429_Pci_Channel_Reset(U16BIT card, U16BIT channel, U32BIT chanFlags);
//extern S16BIT mcx_A429_Pci_Card_SetConfiguration(U16BIT card, U32BIT cardFlags);

// Not verified functions
extern S16BIT mcx_wm_Stop_H009(U16BIT deviceId);
 
extern S16BIT mcx_GetIntVector (U16BIT deviceId, U16BIT* interruptsStatuses);

extern S16BIT mcx_SetTime (U16BIT deviceId, U64BIT time, USHORT reg14 = 0, USHORT reg15 = 0, USHORT reg16 = 0, USHORT REG17 = 0);

extern S16BIT mcx_GetTime (U16BIT deviceId, U64BIT* time);

extern S16BIT mcx_SetTimeResolution (U16BIT deviceId, U16BIT timeResolution);
 
extern S16BIT mcx_GetTimeResolution (U16BIT deviceId, U16BIT* timeResolution);

extern S16BIT mcx_Element_EnableIrq (U16BIT deviceId, U16BIT busList, U16BIT element);

extern S16BIT mcx_Element_ElementGetIrq (U16BIT deviceId, U16BIT busList, U16BIT element, U16BIT* interruptStatusRegisterValue);


// Service Functions
extern S16BIT mcx_Transmit_1553_Message (U16BIT deviceId, U16BIT command, U16BIT* blockStatusWord, WORD* buffer, U16BIT* actualWordCount, U16BIT* status, U16BIT* tTag, U16BIT* options);

extern S16BIT mcx_Transmit_1553_Messages(U16BIT deviceId, U16BIT command, U16BIT* blockStatusWord, WORD* buffer, U16BIT numberOfShots, U16BIT* status, U16BIT* options);

extern S16BIT mcx_Send_Data_To_RT (U16BIT deviceId, U16BIT rt, U16BIT subAddress, U16BIT wordCount, WORD* buffer, U16BIT* blockStatusWord, U16BIT* status, U16BIT* tTag, U16BIT* options);

extern S16BIT mcx_Get_Data_From_RT (U16BIT deviceId, U16BIT rt, U16BIT subAddress, U16BIT wordCount, WORD* buffer, U16BIT* blockStatusWord, U16BIT* status, U16BIT* tTag, U16BIT* options);