Mil/lib/McxAPIWrapper.cs


        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetIntVector(uint deviceId, ref ushort interruptsStatuses);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetTime(uint deviceId, ulong time, ushort reg14 = 0, ushort reg15 = 0, ushort reg16 = 0,ushort REG17 = 0);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetTime(uint deviceId, ref ulong time);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetTimeResolution(uint deviceId, uint timeResolution);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetTimeResolution(uint deviceId, ref ushort timeResolution);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Set_Error(uint deviceId, uint errorType, uint messageNumber, uint wordNumber, int injectionParameters, int zXDistortion);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_EnableIrq(uint deviceId, uint busList, uint element);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_ElementGetIrq(uint deviceId, uint busList, uint element, ref ushort interruptStatusRegisterValue);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Element_Results_PP194(uint deviceId, uint busList, uint elementIndex, ref uint blockStatusWord, ref ushort buffer, ushort bufferSize, ref ushort status1, ref ushort status2, ref ushort tag);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetUserPort(uint deviceId, uint userPort);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetUserPort(uint deviceId, ref uint userPort);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetCurrentFrameNumber(uint deviceId, ref uint currFrameNumber);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_GetNextMsg_H009(uint deviceId, ref uint swPointer, ref ushort command, ref ushort isCommandValid, ref ushort data, ref ushort bufferSize, ref uint BSW, ref ulong tTag);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_GetNextMsg_1553_194(uint deviceId, ref uint msgType, ref uint swPointer, ref ushort rxCommand, ref ushort txCommand, ref ushort data, ref ushort bufferSize, ref ushort rxStatus, ref ushort txStatus, ref uint BSW, ref ulong tTag);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_collectMonitor(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_Stop_H009(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_wm_Initialize(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Grip2_GetTemperature(uint deviceId, ref int temperature);

        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetReturnCodeDescription(int errorCode, StringBuilder errorCodeDescription);
        
        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetLicenseDescription(uint deviceId, StringBuilder description);
        
        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetMonitorErrorsDescription(uint bsw, StringBuilder errorsDescription);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_SetGap(uint deviceId, uint elementId, uint gap);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_pTDR_GetRawData(uint deviceId, ref ushort buffer, ushort bufferSize);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Restart(uint deviceId, uint busList);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_BusList_UpdateData(uint deviceId, uint busList, ref int updatedFrame);
        
        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetSimulatorErrorsDescription(uint bsw, StringBuilder errorsDescription, ushort protocol);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_pTDR_Enable(uint deviceId, ushort enable, ushort options);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Transmit_1553_Message(uint deviceId, uint command, ref uint blockStatusWord, ref ushort buffer, ref ushort actualWordCount, ref ushort status, ref ushort tTag, ref ushort options);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Transmit_1553_Messages(uint deviceId, uint command, ref uint blockStatusWord, ref ushort buffer, ushort numberOfShots, ref ushort status, ref ushort options);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Send_Data_To_RT(uint deviceId, uint rt, uint subAddress, uint wordCount, ref ushort buffer, ref uint blockStatusWord, ref ushort status, ref ushort tTag, ref ushort options);
                                                    
        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Data_From_RT(uint deviceId, uint rt, uint subAddress, uint wordCount, ref ushort buffer, ref uint blockStatusWord, ref ushort status, ref ushort tTag, ref ushort options);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetConfigurationRegisters(uint deviceId, uint configRegisters, uint configRegisters2);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetConfigurationRegisters(uint deviceId, ref uint configRegisters, ref uint configRegisters2);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetupRS422(uint deviceId, uint line, uint bitsCount, uint parity, uint stopBits, uint rateDivider);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SendRS422(uint deviceId, uint line, uint length, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_RS485_Setup(uint moduleId, uint line, uint bitsCount, uint parity, uint stopBits, uint rateDivider, uint rxTxMode, ref uint offset);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_RS485_Put(uint moduleId, uint line, uint length, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_RS485_Get(uint moduleId, uint line, ref uint offset, uint length, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_RS485_GetNumberOfReceivedWords(uint moduleId, uint line, uint offset, ref uint length);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_RS485_GetStatus(uint moduleId, ref uint line0, ref uint line1);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_GetCount(ref uint numOfChannels);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_Open(uint channel, ref mcx_A429ChannelInfo channelInfo);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Setup(uint device);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_GetInformation(uint channel, ref mcx_A429ChannelInfo channelInfo);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_Close(uint channel);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_SetConfigRegister(uint channel, uint chanFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_GetConfigRegister(uint channel, ref uint chanFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_GetStatusRegister(uint channel, ref uint chanStats);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Receive(uint channel, uint bufferSize, ref uint buffer, ref uint numberOfReceivedWords);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Send(uint channel, uint bufferSize, ref uint buffer, ref uint numberOfWrittenWords);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_GetRxWordsPending(uint channel, ref uint numberOfWords);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Card_SetConfiguration(uint cardFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Channel_Reset(uint channel, uint cardFlags);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_GetCount(uint card, ref uint numOfChannels);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Tx_Rx_Channel_Count(uint card, ref uint numOfTxChannels, ref uint numOfRxChannels);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_Open(uint card, uint channel, ref mcx_A429ChannelInfo channelInfo);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_A429_Pci_Channel_GetInformation(uint card, uint channel, ref mcx_A429ChannelInfo channelInfo);
